2021-08-11  Dana Estra  <destra@apple.com>

        Start smooth keyboard scrolling animation when pageUp or pageDown key is pressed.
        https://bugs.webkit.org/show_bug.cgi?id=228156

        Reviewed by Tim Horton.
        
        UIProcess now no longer handles scrollPageUp and scrollPageDown events. They return to eventHandler as
        unhandled and the keyboard scroll animation is started.

        Tests: fast/scrolling/keyboard-scrolling-distance-downArrow.html
               fast/scrolling/keyboard-scrolling-distance-pageDown.html

        * page/EventHandler.cpp:
        (WebCore::EventHandler::defaultKeyboardEventHandler):
        * platform/KeyboardScrollingAnimator.cpp:
        (WebCore::KeyboardScrollingAnimator::keyboardScrollForKeyboardEvent const):

2021-08-11  Aditya Keerthi  <akeerthi@apple.com>

        REGRESSION (r273072): Caps lock indicator in password field is too large
        https://bugs.webkit.org/show_bug.cgi?id=228970
        rdar://81546781

        Reviewed by Wenson Hsieh.

        r273072 made it so that flex items with an intrinsic size will honor
        their aspect ratio when computing their content size. Prior to the
        change, in taller password fields, the flex item representing the caps
        lock indicator would be tall and narrow. The height would stretch to
        fill the container, but the width would maintain its intrinsic width of
        17px. Now that aspect ratio is accounted for, the width increases to
        match the height, resulting in a much larger indicator in taller password
        fields.

        However, while r273072 regressed the appearance of the caps lock
        indicator, it merely exposed an issue with the styling of the indicator.

        Consider the following test case, which is a reduced version how the
        caps lock indicator is styled:

        <div style="display: flex; height: 100px">